Merge main: Resolve conflicts in test files - keep comprehensive tests from both branches